# doranet

./: .gitattributes  .gitignore  LICENSE  README.md  STRATEGY.txt  environment-compat.yml  environment-dev.yml  environment.yml  example_notebook.ipynb  network.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main_workflow.yml  test.yml  validation.yml
doc/source/: conf.py  index.rst  tutorials.md  usage.md
doc/source/tutorials/: 6-filters.md  7-metadata.md
docs/source/: api.rst  conf.py  index.rst
docs/source/tutorials/: 1-introduction.md  2-molecules-and-operators.md  3-writing-operators.md  4-creating-a-basic-network.md  5-cartesian-expansion.md  6-filters.md  8-global-hooks.md
doranet/: __init__.py  containers.py  datatypes.py  engine.py  filters.py  hooks.py  interfaces.py  metacalc.py  metadata.py  network.py  strategies.py  utils.py
doranet/modules/: __init__.py
doranet/modules/enzymatic/: __init__.py  all_cofactors.tsv  generate_network.py
doranet/modules/post_processing/: __init__.py  post_processing.py
doranet/modules/synthetic/: Reaction_Smarts_Forward.py  Reaction_Smarts_Retro.py  __init__.py  _function_generation.py  generate_network.py
pickaxe_generic/: __init__.py  containers.py  datatypes.py  engine.py  filters.py  hooks.py  interfaces.py  metacalc.py  metadata.py  network.py  priority_queue.py  strategies.py  test_batches.py  test_generations.py  utils.py
samples/: 1-basicnetwork.py  1-introduction.md  2-molecules-and-operators.md  3-writing-operators.md  4-creating-a-basic-network.md  5-cartesian-expansion.md  6-filters.md  7-metadata.md  8-global-hooks.md  example-operators.md  osmium_testo.py  test_batches.py  test_generations.py
samples/code/: 1-introduction.py  3-writing-operators.py  4-creating-a-basic-network.py  5-cartesian-expansion.py  6-filters.py  7-metadata.py  8-global-hooks.py  strat_test.py  test-network-load.py
samples/notebooks/: 2-molecules-and-operators.ipynb  3-writing-operators.ipynb
samples/testing-code-please-ignore/: osmium_testo.py  test-network-load.py  test_logreduce.py
src/doranet/: __init__.py  engine.py  hooks.py  interfaces.py  metacalc.py  metadata.py  network.py  strategies.py
src/doranet/core/: __init__.py
src/doranet/core/datamodel/: __init__.py  _dataunit.py  _identifier.py  _molecule.py  _operator.py
src/doranet/core/datatypes/: __init__.py  _datatypes.py
src/doranet/core/engine/: __init__.py  _engine.py
src/doranet/core/filters/: __init__.py  _filters.py
src/doranet/core/hooks/: __init__.py
src/doranet/core/interfaces/: __init__.py  _dataunit.py  _identifier.py  _interfaces.py  _molecule.py
src/doranet/core/metacalc/: __init__.py
src/doranet/core/metadata/: __init__.py  _metadata.py
src/doranet/core/network/: __init__.py  _network.py
src/doranet/core/strategies/: __init__.py  _strategies.py
src/doranet/core/utils/: __init__.py  _utils.py
src/doranet/modules/enzymatic/: generate_network.py
src/doranet/modules/post_processing/: __init__.py  post_processing.py
src/doranet/modules/synthetic/: Reaction_Smarts_Forward.py  _function_generation.py  generate_network.py
test/: environment-lint.yml  import_test.py
tests/: __init__.py  test_import.py  test_meta.py  test_networks.py  test_tutorial.py
tutorial/: readme.md
tutorial/jupyter/: 1-introduction.ipynb  2-molecules-and-operators.ipynb  3-writing-operators.ipynb  4-creating-a-basic-network.ipynb  5-cartesian-expansion.ipynb  6-filters.ipynb  7-metadata.ipynb  8-global-hooks.ipynb
tutorial/markdown/: 1-introduction.md  2-molecules-and-operators.md  3-writing-operators.md  4-creating-a-basic-network.md  5-cartesian-expansion.md  6-filters.md  7-metadata.md  8-global-hooks.md
