[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'doranet'
version = '0.5.2a1'
authors = [
    { name='William Sprague', email='wsprague@u.northwestern.edu' },
    { name='Quan Zhang', email='quanzhang@northwestern.edu' },
]
description = 'Python package for generating and analyzing chemical reaction networks'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
license = {file = "LICENSE"}
dependencies = [
    "ipython",
    "matplotlib",
    "networkx[extras]",
    "numpy",
    "pandas",
    "pillow",
    "pyarrow",
    "pypdf",
    "rdkit<=2023.9.5",
    "scipy",
]

[project.optional-dependencies]
doc = [
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-mermaid",
    "sphinx-rtd-theme",
]
lint = [
    "mypy",
    "ruff",
]
profile = [
    "scalene",
    "snakeviz"
]
test = [
    "pytest",
]
dev = [
    "doranet[doc,lint,profile,test]",
    "hatch",
]

[project.urls]
Homepage = "https://github.com/wsprague-nu/doranet"
Issues = "https://github.com/wsprague-nu/doranet/issues"

[[tool.mypy.overrides]]
module = [
    "IPython.*",
    "networkx.*",
    "pandas.*",
    "pgthermo.*",
    "PIL.*",
    "rdkit.*",
]
ignore_missing_imports = true

[tool.ruff]
extend-include = ["*.ipynb"]
indent-width = 4
line-length = 80
target-version = "py310"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "PL", "SIM", "W"]
ignore = ["D101","D102","D103","D105","PLR0911","PLR0912","PLR0913","PLR0915"]

[tool.ruff.lint.per-file-ignores]
"**/modules/synthetic/{Reaction_Smarts_Forward.py,Reaction_Smarts_Retro.py}" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
