[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'doranet'
version = '0.6.0a4'
authors = [
    { name='William Sprague', email='wsprague@u.northwestern.edu' },
    { name='Quan Zhang', email='quanzhang@northwestern.edu' },
]
description = 'Python package for generating and analyzing chemical reaction networks'
readme = 'README.md'
requires-python = '>=3.10'
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Hatch",
    "Framework :: Pytest",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Chemistry",
]
license = {file = "LICENSE"}
dependencies = [
    "ipython",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "pillow",
    "pyarrow",
    "pypdf",
    "rdkit<=2023.9.5",
    "scipy",
    "typing-extensions >=4.14, <5",
]

[project.optional-dependencies]
doc = [
    "myst-parser",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-mermaid",
    "sphinx-rtd-theme",
]
draw = [
    "pygraphviz",
]
lint = [
    "mypy",
    "ruff<=0.7.3",
]
profile = [
    "scalene",
    "snakeviz"
]
test = [
    "pytest",
]
dev = [
    "doranet[doc,lint,profile,test]",
    "hatch",
]

[project.urls]
Homepage = "https://github.com/wsprague-nu/doranet"
Issues = "https://github.com/wsprague-nu/doranet/issues"

[tool.mypy]
no_implicit_reexport = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "IPython.*",
    "networkx.*",
    "pandas.*",
    "pgthermo.*",
    "PIL.*",
    "rdkit.*",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "src"
]

[tool.ruff]
extend-include = ["*.ipynb"]
indent-width = 4
line-length = 80
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "PL", "SIM", "W"]
ignore = ["D101","D102","D103","D105","PLR0911","PLR0912","PLR0913","PLR0915"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"**/modules/synthetic/{Reaction_Smarts_Forward.py,Reaction_Smarts_Retro.py}" = ["E501"]
"**.ipynb" = ["E501"]
"test*" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
