[metadata]
name = pickaxe_generic
version = 0.1.1
author = "William Sprague"
author_email = "wsprague@u.northwestern.edu"
description = "A streamlined, generic rewrite of Pickaxe."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wsprague-nu/Pickaxe-Generic
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[flake8]
max-line-length = 80
extend-ignore = E203
docstring-convention=numpy