[metadata]
name = doranet
version = 0.4.0
author = "William Sprague"
author_email = "wsprague@u.northwestern.edu"
description = "A streamlined, generic rewrite of Pickaxe."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wsprague-nu/doranet
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9